<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/stop_no_menu"
            android:icon="@drawable/ic_directions_bus_black_24dp"
            android:title="Search Stop No." />
        <item
            android:id="@+id/settings_menu"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="About" />
    </group>
</menu>