<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/sStopNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stopNoPage"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryDark"
        tools:text="Stop Number Search Page" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/textBox"
        android:layout_marginBottom="5dp"
        android:hint="Enter Stop Number"
        android:gravity="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Get Buses"
        android:id="@+id/button"
        android:layout_below="@+id/textBox"
        android:layout_marginBottom="5dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text"
        android:layout_below="@id/sStopNo"
        android:textSize="20sp"
        android:textStyle="bold"/>
</RelativeLayout>